<resources>
    <string name="app_name">놀담</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main">MainActivity</string>

    <!--툴바-->
    <string name="toolbar_done">완료</string>
    <string name="toolbar_condition">조건</string>
    <string name="toolbar_my_page_frag">MyPage</string>
    <string name="toolbar_find_sitter_frag">선생님 찾기</string>
    <string name="toolbar_box_frag">신청함</string>
    <string name="toolbar_setting_frag">더보기</string>


    <!--프로필 사항-->
    <string name="name">이름</string>
    <string name="address">기본 주소</string>
    <string name="address_detail">상세 주소</string>
    <string name="age">나이</string>
    <string name="univ">학교</string>
    <string name="major">전공</string>
    <string name="info">자기소개</string>
    <string name="able_location">가능지역</string>
    <string name="able_time">가능시간</string>
    <string name="gender">성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="no_matter">상관없음</string>
    <string name="birth">생년월일</string>
    <string name="able_day">가능 요일</string>
    <string name="find_location">지역찾기</string>
    <string name="set_time">시간설정</string>

    <string name="child_info">아이 소개</string>
    <string name="child_name">아이 이름</string>
    <string name="child_age">아이 나이</string>
    <string name="child_gender">아이 성별</string>

    <!--선생님 프로필 등록-->
    <string name="reg_sitter_profile_intro">무언가 엄청난 뭔가를\n여기에다가 적어서\n선생님의 프로필을\n등록한다.</string>
    <string name="reg_sitter_profile_intro_btn">프로필 등록하기 &#62;</string>
    <string name="certification">인증서 첨부</string>
    <string name="certification_upload">첨부</string>

    <!--아이 프로필 등록-->
    <string name="reg_child_profile_intro">무언가 엄청난 뭔가를\n여기에다가 적어서\n아이의 프로필을\등록한다.</string>
    <string name="reg_child_profile_intro_btn">아이 프로필 등록하기 &#62;</string>
    <string name="reg_child_profile_name">아이의 이름을 입력해주세요.</string>
    <string name="reg_child_profile_gender">아이의 성별을 선택해주세요.</string>
    <string name="reg_child_profile_birth">아이의 생년월일을 입력해주세요.</string>
    <string name="reg_child_profile_address">아이의 집 주소를 입력해주세요.</string>
    <string name="reg_child_profile_info">아이에 대해 알려주세요.</string>
    <string name="reg_child_profile_info_edit">우리 아이는&#8230;</string>

    <!-- 버튼 관련 -->
    <string name="btn_next">다음</string>
    <string name="btn_previous">이전</string>
    <string name="btn_submit">등록 완료</string>
    <string name="btn_add">추가</string>

    <string name="btn_address_search">우편번호 검색</string>

    <!-- EditText 관련 -->
    <string name="edit_email">E-mail</string>
    <string name="edit_password">비밀번호(영문/숫자 8~20자)</string>
    <string name="edit_password_test">비밀번호 확인</string>
    <string name="edit_phoneNum">휴대폰 번호</string>
    <string name="edit_verification_num">인증번호</string>

    <!--로그민 및 회원가입-->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="btn_sign_in">로그인</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="chk_id_save">아이디 저장</string>
    <string name="chk_login_remain">로그인 유지</string>
    <string name="txt_id_find">아이디 찾기</string>
    <string name="txt_pw_find">비밀번호 찾기</string>
    <string name="txt_spacing">&#160;&#160;|&#160;&#160;</string>
    <string name="btn_register_user">회원가입</string>
    <string name="btn_duplication_test">중복 확인</string>
    <string name="btn_send_verification_num">인증번호 발송</string>
    <string name="txt_about_verification_num">(1일 5회까지만 휴대폰 인증이 가능합니다.)</string>

    <!--신청하기 관련-->
    <string name="txt_play_address">놀이 주소</string>
    <string name="txt_chk_same_address">나의 집 주소와 동일</string>
    <string name="txt_play_time">놀이 시간</string>
    <string name="txt_play_time_weekly">주당</string>
    <string name="txt_option">옵션</string>
    <string name="txt_sibling_0">없음</string>
    <string name="txt_sibling_1">형제 1명 추가 (시급 + 3000원)</string>
    <string name="txt_sibling_2">형제 2명 추가 (시급 + 6000원)</string>
    <string name="txt_pay">비용</string>
    <string name="txt_desired_time">놀이 희망 시간</string>
    <string name="txt_desired_time_10">10시간 + (1시간)</string>
    <string name="txt_desired_time_20">20시간 + (3시간)</string>
    <string name="txt_desired_time_30">30시간 + (5시간)</string>
    <string name="txt_total_pay">총 결제 비용</string>
    <string name="txt_request">신청하기</string>

    <!--EditText 에러 관련-->
    <string name="error_invalid_name">이름은 두 글자 이상이어야 합니다.</string>
    <string name="error_invalid_email">이메일 양식이 아닙니다.</string>
    <string name="error_invalid_password">6~20자의 영문, 숫자 조합이 아닙니다.</string>
    <string name="error_incorrect_password">비밀번호가 일치하지 않습니다.</string>
    <string name="error_field_required">필수 입력 사항입니다.</string>

    <!--이용약관-->
    <string name="service_terms"><u>서비스 이용약관</u></string>
    <string name="privacy_policy_terms">개인 정보 취급 방침</string>
    <string name="and_char_terms">&#160;및&#160;</string>
    <string name="user_agreement">동의합니다.</string>
    <string name="input_user_info">회원 정보 입력</string>

    <!--가능지역-->
    <string-array name="able_location">
        <item>강남구</item>
        <item>강동구</item>
        <item>강서구</item>
        <item>강북구</item>
        <item>관악구</item>
        <item>광진구</item>
        <item>구로구</item>
        <item>금천구</item>
        <item>노원구</item>
        <item>도봉구</item>
        <item>동대문구</item>
        <item>동작구</item>
        <item>마포구</item>
        <item>서대문구</item>
        <item>서초구</item>
        <item>성동구</item>
        <item>성북구</item>
        <item>송파구</item>
        <item>양천구</item>
        <item>영등포구</item>
        <item>용산구</item>
        <item>은평구</item>
        <item>종로구</item>
    </string-array>

    <string-array name="keyword">
        <item>강남구</item>
        <item>강동구</item>
        <item>강서구</item>
        <item>강북구</item>
        <item>관악구</item>
        <item>광진구</item>
        <item>구로구</item>
        <item>금천구</item>
        <item>노원구</item>
        <item>도봉구</item>
        <item>동대문구</item>
        <item>동작구</item>
        <item>마포구</item>
        <item>서대문구</item>
        <item>서초구</item>
        <item>성동구</item>
        <item>성북구</item>
        <item>송파구</item>
        <item>양천구</item>
        <item>영등포구</item>
        <item>용산구</item>
        <item>은평구</item>
        <item>종로구</item>
    </string-array>


    <!--유저 유형 선택-->
    <string name="user_type_sitter">선생님으로 함께하기</string>
    <string name="user_type_parent">내 아이와 함께하기</string>

    <!--더보기-->
    <string name="action_settings">Settings</string>
    <string name="txt_version_info">버전정보</string>
    <string name="txt_version">v 1.0.0</string>
    <string name="txt_setting">설정</string>
    <string name="txt_private_info">개인정보</string>
    <string name="txt_my_account">내 계정</string>
    <string name="txt_my_profile">내 프로필</string>
    <string name="txt_matching_info">매칭 정보</string>
    <string name="txt_play_up">놀이쌓기</string>
    <string name="txt_logout">로그아웃</string>
    <string name="txt_contact_us">문의하기</string>
    <string name="txt_faq">FAQ</string>

    <string name="txt_my_account_description">하나의 계정으로 놀담 서비스를 이용하실 수 있습니다.</string>
    <string name="txt_pw_change">계정 비밀번호 변경</string>

    <!--우편번호 api 인증번호-->
    <string name="post_api_key">J2%2F6DnCcfBJf9aQxMB7ctLMNYFKG8mVcnlXnGlbIZ3E8uQ5ZC7qxXnfj4mF8%2BQwm3j6%2FcopPOd5uWa5wqQCsNQ%3D%3D</string>

    <!-- 카메라-->
    <string name="pick_image_intent_text">사진 선택</string>

</resources>
