<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/login_activity_horizontal_margin"
    android:paddingRight="@dimen/login_activity_horizontal_margin"
    tools:context="com.sopt.inydus_demo.login.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imgLogo_login"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@mipmap/noldam_logo"
            android:transitionName="logo" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_border"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_border"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_activity_vertical_spacing"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_next_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_register_user"
                android:textSize="@dimen/login_activity_check_text_size" />

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_sign_in"
                android:textSize="@dimen/login_activity_check_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_activity_vertical_spacing"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_ID_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:checked="true"
                android:text="@string/chk_id_save"
                android:textColor="@color/whiteColor" />

            <CheckBox
                android:id="@+id/chk_login_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:checked="true"
                android:text="@string/chk_login_remain"
                android:textColor="@color/whiteColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_activity_vertical_spacing"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_ID_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_id_find"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/login_activity_check_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_spacing"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/login_activity_check_text_size" />

            <TextView
                android:id="@+id/btn_PW_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pw_find"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/login_activity_check_text_size" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
