<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".register.register_profile.parent.view.RegChildProfileActivity_Name"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_regCP_adres"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:layout_marginTop="@dimen/spacing_in_RegBabyProfileActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_child_profile_address"
        android:id="@+id/txt_regCP_adres" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editAddress_regCP_adres"
            android:background="@drawable/edit_border"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/address"
            android:textColorHint="#999999"
            android:textColor="#000"
            android:textSize="15sp"
            android:padding="10dp"
            android:enabled="false"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_address_search"
            android:id="@+id/btnAddress_regCP_adres" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editAddress_detail_regCP_adres"
        android:background="@drawable/edit_border"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/address_detail"
        android:textColorHint="#999999"
        android:textSize="15sp"
        android:textColor="#000"
        android:padding="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginTop="@dimen/spacing_in_RegBabyProfileActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_previous"
            android:id="@+id/btn_previous_regCP_adres"/>

        <Button
            android:layout_marginTop="@dimen/spacing_in_RegBabyProfileActivity"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:id="@+id/btn_next_regCP_adres"/>

    </LinearLayout>
</LinearLayout>
