<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sopt.inydus_demo.findSitter.String.RequestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ItemName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_play_address" />

                    <CheckBox
                        android:id="@+id/chk_same_address_request"
                        style="@style/ItemName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/txt_chk_same_address" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/basic_btn_spacing"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editAddress_request"
                        style="@style/ItemBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:singleLine="true" />

                    <TextView
                        android:id="@+id/txtBtn_address_request"
                        style="@style/YellowButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/basic_btn_spacing"
                        android:text="@string/btn_address_search" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editAddress_detail_request"
                    style="@style/ItemBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_detail"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/basic_vertical_spacing"
                android:orientation="vertical">

                <TextView
                    style="@style/ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_play_time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/basic_item_name_margin"
                    android:orientation="horizontal">

                    <LinearLayout
                        style="@style/ItemBox"
                        android:padding="0dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <LinearLayout
                            android:id="@+id/layout_able_time_request"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:minHeight="100dp">

                        </LinearLayout>

                        <LinearLayout
                            android:padding="@dimen/basic_box_padding"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@null">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/blackColor"
                                android:layout_marginTop="10dp"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/basic_box_padding"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/txt_play_time_weekly"
                                    android:textSize="@dimen/basic_item_content_text_size" />

                                <FrameLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:id="@+id/txt_weekly_hour_request"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="end"
                                        android:textSize="@dimen/basic_item_content_text_size"
                                        android:text="0시간"/>

                                </FrameLayout>

                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtBtn_add_request"
                        style="@style/YellowButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/basic_btn_spacing"
                        android:text="@string/btn_add" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_option" />

                <RadioGroup
                    android:id="@+id/radioGroup_sibling_request"
                    style="@style/ItemBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_sibling0"
                        style="@style/ItemContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_sibling_0"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/radio_sibling1"
                        style="@style/ItemContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_sibling_1" />

                    <RadioButton
                        android:id="@+id/radio_sibling2"
                        style="@style/ItemContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_sibling_2" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_desired_time" />

                <RadioGroup
                    android:id="@+id/radioGroup_desired_time_request"
                    style="@style/ItemBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioBtn_10_time"
                        style="@style/ItemContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_desired_time_10"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/radioBtn_20_time"
                        style="@style/ItemContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_desired_time_20" />

                    <RadioButton
                        android:id="@+id/radioBtn_30_time"
                        style="@style/ItemContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_desired_time_30" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_pay" />

                <LinearLayout
                    style="@style/ItemBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtPayDescription_request"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:text="어쭈구 저쭈구\n어쭈구저쭈구"
                        android:textSize="13sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/blackColor" />

                    <LinearLayout
                        android:layout_marginTop="@dimen/basic_vertical_spacing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/txt_total_pay"
                            android:textSize="@dimen/basic_highlighted_txt"
                            android:textColor="@color/blackColor"/>

                        <TextView
                            android:id="@+id/txtTotalPay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/basic_highlighted_txt"
                            android:textColor="@color/blackColor"
                            android:text="300000원"/>


                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnRequest_req"
                style="@style/YellowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginTop="20dp"
                android:text="신청하기" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>