<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".register.register_profile.parent.view.RegChildProfileActivity_Name"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_regCP_name"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_child_profile_name"
        android:id="@+id/txt_regCP_name" />

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_regCP_name"
        android:hint="@string/name"
        android:background="@drawable/edit_border"
        android:inputType="text"
        android:singleLine="true"
        android:textColorHint="#999999"
        android:textSize="15sp"
        android:padding="10dp"
        android:ems="5"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        android:id="@+id/btn_next_regCP_name"/>
</LinearLayout>
